--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Shreya</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 
 <body>
@@ -44,12 +46,12 @@
     </div>
 
     <!-- my projects -->
-    <center><h1 style="color: white;margin-top: 50px;">Projects</h1></center>
+    <center><h1 style="color: white;margin-top: 50px;border-top: 1px white solid;width: 240px;">Projects</h1></center>
      <div class="card-container" id="projects">
         <div class="card">
             <div class="card-content">
                 <h2 style="color: #9742ff;">CodeFury 7.0</h2>
-                <p>Codefury 7.0 is a website I built for our college hackathon, part of IEEE UVCE's software development SIG, showcasing technical skills and innovation in software development.</p>
+                <p>Codefury 7.0 is a website I built for our college hackathon, part of IEEE UVCE's software development SIG, showcasing technical skills.</p>
                 <a href="https://github.com/shr968/CodeFury-7.0.git" class="btn">GitHub</a>
             </div>
         </div>
@@ -68,23 +70,27 @@
             </div>
         </div>
      </div>
-
-     <!-- footer -->
       <div class="footer-container" id="contact">
         <div class="footer">
-            <center><h3>Shreya Nayak B</h3>
-            <p style="margin-top: 5px;">Socials</p>
-            <div class="socials">
-                <li><a href="https://www.linkedin.com/in/shreya-nayak-b-622a4b261/">LinkedIn</a></li>
-                <li><a href="https://github.com/shr968?tab=repositories">GitHub</a></li>
-                <li><a href="https://mail.google.com/mail/u/0/#inbox?compose=DmwnWsmGVgWrFbwDHKKcqVXbHlmxrjPgSZfjvKGDdmpSshSrVvgmkRQltsBdBsbSRsLhhxNHrPRQ">Gmail</a></li>
+            <div class="footer-item">
+                <h1>Contact:</h1>
+                <p>+91 89040 02112</p>
             </div>
-            <a href="#" style="display: block;" class="btn">Download CV</a>
-            <p>&copy;All Copyrights Reserved</p></center>
-            
+            <div class="footer-item">
+                <h1>Socials</h1><br>
+                <div class="handles">
+                    <li><a href="https://www.linkedin.com/in/shreya-nayak-b-622a4b261/"><i class="fa-brands fa-linkedin"></i></a></li>
+                    <li><a href="https://github.com/shr968?tab=repositories"><i class="fa-brands fa-github"></i></a></li>
+                    <li><a href="mailto:your-email@example.com"><i class="fa-regular fa-envelope"></i></a></li>
+                </div>
+            </div>
+            <div class="footer-item">
+                <a href="https://drive.google.com/file/d/12fTB0dyO-xHqwIf9iq3So_8cEUta9h5i/view?usp=sharing" class="btn">Download CV</a>
+            </div>
         </div>
-      </div>
-
+        <p>&copy; All Rights Reserved</p>
+    </div>
+    
 
 
 
