--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
     </div>
 
     <!-- my projects -->
-    <center><h1 style="color: white;margin-top: 50px;border-top: 1px white solid;width: 240px;">Projects</h1></center>
+    <center><h1 style="color: white;margin-top: 50px;">Projects</h1></center>
      <div class="card-container" id="projects">
         <div class="card">
             <div class="card-content">
-                <h2 style="color: #9742ff;">CodeFury 7.0</h2>
-                <p>Codefury 7.0 is a website I built for our college hackathon, part of IEEE UVCE's software development SIG, showcasing technical skills.</p>
-                <a href="https://github.com/shr968/CodeFury-7.0.git" class="btn">GitHub</a>
+                <h2 style="color: #9742ff;">BitNBuild</h2>
+                <p>A website built as a part of an event BitNBuild organised by GDSE UVCE and GDSC CRCE<br></p><br>
+                <a href="https://github.com/shr968/BitNBuild-SPRint-team.git" class="btn">GitHub</a>
             </div>
         </div>
         <div class="card">
@@ -65,7 +65,7 @@
         <div class="card">
             <div class="card-content">
                 <h2 style="color: #9742ff;">Rock-Papers-Scissors</h2>
-                <p>A fun game that takes us down memory lane to our childhood, built with HTML and CSS, with functionalities implemented using JavaScript. Have fun factor now online:)</p>
+                <p>A fun game that takes us down memory lane to our childhood, built with HTML and CSS, with functionalities implemented using JavaScript.s</p>
                 <a href="https://github.com/shr968/Rock-Paper-Scissors.git" class="btn">GitHub</a>
             </div>
         </div>
@@ -77,7 +77,7 @@
                 <p>+91 89040 02112</p>
             </div>
             <div class="footer-item">
-                <h1>Socials</h1><br>
+                <h1>Socials</h1>
                 <div class="handles">
                     <li><a href="https://www.linkedin.com/in/shreya-nayak-b-622a4b261/"><i class="fa-brands fa-linkedin"></i></a></li>
                     <li><a href="https://github.com/shr968?tab=repositories"><i class="fa-brands fa-github"></i></a></li>
